Fix the warnings
Bug: Not applicable
Test: Not applicable
Change-Id: I78142e55ee1565d3d1df7e940c83e692d6658b0b

GitOrigin-RevId: c3f5fc2fe2dd961bd05fc8eeec4761f8637aed66